--- a/tga_app_sqlite/android/app/src/main/AndroidManifest.xml
+++ b/tga_app_sqlite/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="tga_app_sqlite"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Multiplication Mastery"
+        android:name="${applicationName}">
         <activity
             android:name=".MainActivity"
             android:exported="true"
