--- a/new_task_app/pubspec.yaml
+++ b/new_task_app/pubspec.yaml
@@ -30,11 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  cupertino_icons: ^1.0.8
+  sqflite: ^2.3.2
+  path: ^1.8.3
+  provider: ^6.1.1
+  intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
